# olist-analytics-engineering-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  DATA_LICENSE.md  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/: README.md
airflow/dags/: olist_modern_data_stack.py  olist_modern_data_stack_local.py
dbt/olist_analytics/: README.md  dbt_project.yml  profiles.yml.example
docker/airflow/: Dockerfile  load-env-and-run.sh
docs/: architecture.md  aws_next_steps.md  ci.md  data_model.md  diagrams.md  implementation_plan.md  interview_notes.md  known_limitations.md  runbook.md  runbook_macos.md  runbook_windows.md  source_contract.md  source_profile.json
infra/aws/: s3_iam_setup.md
infra/postgres/: 003_create_audit_tables.sql  README.md
infra/redshift/: 001_create_schemas.sql  002_create_raw_tables.sql  003_create_audit_tables.sql  004_copy_raw_tables_template.sql  README.md
scripts/ci/: check_airflow_dag_imports.py  check_fixture_pipeline_idempotency.py  run_fixture_pipeline.py
scripts/ingestion/: correction_specs.py  generate_correction_feeds.py  ingest_olist_to_s3.py  local_storage.py  prepare_olist_raw_files.py  raw_files.py  record_validation.py  s3_storage.py
scripts/loading/: load_raw_to_postgres.py  replay_dead_letters.py
scripts/orchestration/: __init__.py  batch_control.py
scripts/quality/: __init__.py  reconcile_batch.py
scripts/testing/: create_small_fixture_dataset.py
scripts/utilities/: create_dead_letter_demo_archive.py  profile_olist_zip.py  (+2 more)
tests/: test_dead_letter_pipeline.py
(+51 files in other folders)
