[project]
name = "olist-modern-data-stack"
version = "0.1.0"
description = "Local-first data engineering project for the Olist e-commerce dataset."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.34,<2",
    "dbt-core>=1.8,<2",
    "dbt-postgres>=1.8,<2",
    "dbt-redshift>=1.8,<2",
    "pandas>=2.2,<3",
    "psycopg2-binary>=2.9,<3",
]

[tool.uv]
package = false
required-version = ">=0.11.0"
